Update title to '500km Group Run 2026'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>500km Group Run</title>
+  <title>500km Group Run 2026</title>
   <style>
     body { font-family: system-ui, sans-serif; margin: 20px; }
     .row { display:flex; gap:20px; flex-wrap:wrap; }
