--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="updated">Updated: <span id="updatedAt">—</span></div>
       </header>
       <!-- Entries go here. Populated by JS. -->
+       <div id="json_output"></div>
       <section id="leaderboard-entries">
       </section>
     </section>
