add loading ring, changed leaderboard name

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <!-- The Title Banner -->
     <h1>The Great 500 Km Club 2026</h1>
 
-    <!-- The Leaderboard -->
+    <!-- The Runners Board -->
     <section class="leaderboard">
       <header class="leaderboard-header">
-        <h2>Leaderboard</h2>
+        <h2>The Runners Board</h2>
         <div class="updated">Updated: <span id="updatedAt">—</span></div>
       </header>
       <!-- Entries go here. Populated by JS. -->
       <section id="leaderboard-entries">
+        <div class=loader></div>
       </section>
     </section>
   </main>
